Add version 3 of cortex saver
I finally have a piece of code that does not make me wanna rip my eyes

I have left two unused proposals for later, since we don't have proper
documentation left

--- a/notebooks/CSP Understanding Fit v1.ipynb
+++ b/notebooks/CSP Understanding Fit v1.ipynb
@@ -23,9 +23,15 @@
     "\n",
     "Otros datos que se necesitan son:\n",
     "* Número de canales (que se obtiene de $X$)\n",
-    "* Número de classes (que se obtiene de $y$)\n",
+    "* Número de clases (que se obtiene de $y$)\n",
     "* Una matriz de covarianza (que es classes $\\times$ channels $\\times$ channels y no sé por qué)\n",
-    "* Una lista con los pesos de las muestras o sample (supongo que cada epoch debe tener un número igual de samples para que funcione)"
+    "* Una lista con los pesos de las muestras o sample (supongo que cada epoch debe tener un número igual de samples para que funcione)\n",
+    "\n",
+    "Otros datos que se necesitan son (v2):\n",
+    "* Número de canales (que se obtiene de $X$)\n",
+    "* Número de clases (que se obtiene de $y$)\n",
+    "* Una matriz de covarianza (que es classes $\\times$ channels $\\times$ channels)\n",
+    "* Una lista con los pesos de las muestras o sample (pesos por clase)"
    ]
   },
   {
@@ -93,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +136,7 @@
        "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,16 +158,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 0, 0])"
+       "array([0, 1, 0, 1, 0])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,32 +179,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "2"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weight = sum(y == 1)\n",
+    "weight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weight = sum(y == 0)\n",
+    "weight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False,  True, False,  True])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[2., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
        "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
        "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
        "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
        "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]],\n",
        "\n",
-       "       [[2., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]],\n",
-       "\n",
-       "       [[3., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [[4., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
        "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
        "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
        "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
        "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,34 +271,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [2., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [3., 0., 0., 0., 0., 0., 0., 0., 0., 0.]],\n",
+       "array([[[2., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [4., 0., 0., 0., 0., 0., 0., 0., 0., 0.]],\n",
        "\n",
        "       [[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
        "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]],\n",
        "\n",
        "       [[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
        "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]],\n",
        "\n",
        "       [[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
        "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]],\n",
        "\n",
        "       [[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
        "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,25 +312,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 2., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 3., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "array([[2., 0., 0., 0., 0., 0., 0., 0., 0., 0., 4., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0.],\n",
        "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        0., 0., 0., 0.],\n",
        "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        0., 0., 0., 0.],\n",
        "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        0., 0., 0., 0.],\n",
        "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
+       "        0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
